compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_sized_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<a:16-little>> -> a\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:16-little>> -> a
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize === 16) {
    let a = bitArraySliceToInt(x, 0, 16, false, false);
    return a;
  } else {
    return 1;
  }
}
