compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_sized_little_endian_signed.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<a:16-little-signed>> -> a\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:16-little-signed>> -> a
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize === 16) {
    let a = bitArraySliceToInt(x, 0, 16, false, true);
    return a;
  } else {
    return 1;
  }
}
