compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_sized_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<i:16>> -> i\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<i:16>> -> i
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize === 16) {
    let i = bitArraySliceToInt(x, 0, 16, true, false);
    return i;
  } else {
    return 1;
  }
}
