compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_sized_value_constant_pattern.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1171
expression: "\npub fn go(x) {\n  case x {\n    <<258:16>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<258:16>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize === 16) {
    if (x.byteAt(0) === 1 && x.byteAt(1) === 2) {
      return 1;
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
